Never upload kaggle.json

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,11 @@ share/python-wheels/
 *.egg
 *.DS_Store
 
+# Scratch notebooks
+.ipynb_checkpoints
+scratch.ipynb
+kaggle.json
+
 # Data
 *.csv
 *.db
